--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,14 +2,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (console)",
+            "name": "Sum",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}\\HelloWorld\\bin\\Debug\\netcoreapp1.1\\HelloWorld.dll",
+            "program": "${workspaceRoot}\\Sum\\bin\\Debug\\netcoreapp1.1\\Sum.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
-            "externalConsole": false,
+            "externalConsole": true,
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart"
         },
